# bt-gateway

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt
azure_iot/common/azure_ca_recovery/: azure_ca_recovery_mbedtls_rsa_verify.c  azure_ca_recovery_parse.c  azure_ca_recovery_parse.h  azure_ca_recovery_rsa_verify.h  azure_ca_recovery_storage.h
azure_iot/common/transport/: sockets_wrapper_freertos_tcpip.c  sockets_wrapper_lwip.c  transport_socket.c  transport_tls_socket.h
azure_iot/esp32/: README.md
azure_iot/sample_azure_iot/: sample_azure_iot.c
components/azure-iot/: CMakeLists.txt  azure-iot.c  azure_iot.c  azure_iot.h  connectivity.c  transport_tls_esp32.c
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/ble_scan/: CMakeLists.txt  ble_scan.c  idf_component.yml  main.c
components/coreMQTT/: CMakeLists.txt
components/espnow_scan/: CMakeLists.txt  espnow_scan.c
components/sample-azure-iot/: CMakeLists.txt  Kconfig.projbuild
components/sensors/: CMakeLists.txt  esp_temp_sensor.c  sensors.c
components/sensors/esp32-hdc1080/: CMakeLists.txt  hdc1080.c  hdc1080_main.c
components/sensors/esp32-hdc1080/include/: hdc1080_main.h
components/sensors/include/: esp_temp_sensor.h  sensors.h
components/sensors/led/: led_strip.c
components/sensors/led/include/: led_strip.h
config/: demo_config.h
libs/: azure-iot-middleware-freertos
licenses/: azure_iot-middleware-freertos-samples-notice.txt
main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c  main.c
(+21 files in other folders)
